Preventing overflowing numbers

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,11 @@ button:hover {
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
+
+    word-wrap: break-word;
+    word-break: break-all;
+    text-align: end;
+    
 }
 
 .output .previous-operator {
